--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,7 +25,29 @@ input:focus{
     font-size: 16px !important;
 }
 
+
+
 /* common styling */
+
+.spinner-parent{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.724);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 9999;
+}
+
+.spinner-border{
+    width: 5rem;
+    height: 5rem;
+    color: whitesmoke !important;
+}
+
 .card-title{
     margin-top: 30px;
     font-size:1.3rem ;
